--- a/research/st_01.ipynb
+++ b/research/st_01.ipynb
@@ -31,13 +31,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class DataIngestionConfig:\n",
+    "    root_dir: Path\n",
+    "    source_URL: str\n",
+    "    local_data_file: Path\n",
+    "    unzip_dir: Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from deepClassifier.constants import *\n",
     "from deepClassifier.utils import read_yaml, create_directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-10-16 14:28:51,895: INFO: common]: yaml file: configs\\config.yaml loaded successfully\n",
-      "[2022-10-16 14:28:52,055: INFO: common]: yaml file: params.yaml loaded successfully\n",
-      "[2022-10-16 14:28:52,087: INFO: common]: created directory at: artifacts\n",
-      "[2022-10-16 14:28:52,087: INFO: common]: created directory at: artifacts/data_ingestion\n"
+      "[2022-10-20 17:19:01,414: INFO: common]: yaml file: configs\\config.yaml loaded successfully\n",
+      "[2022-10-20 17:19:01,623: INFO: common]: yaml file: params.yaml loaded successfully\n",
+      "[2022-10-20 17:19:01,663: INFO: common]: created directory at: artifacts\n",
+      "[2022-10-20 17:19:01,813: INFO: common]: created directory at: artifacts/data_ingestion\n"
      ]
     }
    ],
